# GBPrinter-discord-bot

./: CMakeLists.txt  ImageProcessing.py  README.md  firmware-0.1.uf2  main.c  main.py  serial.py  serialCommunication.py
C COPY BACKUP THING/: main.c
c/: CMakeLists.txt  main.c
python/: ImageProcessing.py  main.py  serialCommunication.py
